syntax = "proto3";
package common;
import "google/protobuf/timestamp.proto";
option go_package = "provider/plugin/common";

message Empty {}

message SetLoggerRequest{
    uint32 logger= 1;
}

message SetLoggerResponse {
    string err = 1;
}

message ConfigureRequest {
    bytes data = 1;
}

message LoadRequest {
    google.protobuf.Timestamp deadline = 2;
}

message ConfigureResponse {
    string err = 1;
}

message SetDataDirRequest {
    string dir = 1;
}

message SetDataDirResponse {
    string err = 1;
}

message SetCacheDirRequest {
    string dir = 1;
}

message LoadResponse {
    bytes data = 1;
    string err = 2;
}

message LoadingMessageRequest {
    string name = 1;
    bool done = 2;
    string err = 3;
}

message EmitLogMessageRequest {
    uint32 level = 1;
    string message = 2;
}

service ProviderPlugin {
    rpc SetLogger(SetLoggerRequest) returns (SetLoggerResponse);
    rpc Configure(ConfigureRequest) returns (ConfigureResponse);
    rpc SetDataDir(SetDataDirRequest) returns (SetDataDirResponse);
    rpc SetCacheDir(SetCacheDirRequest) returns (Empty);
    rpc Invalidate(Empty) returns (Empty);
    rpc Keep(Empty) returns (Empty);
    rpc Load(LoadRequest) returns (LoadResponse);
}

service Logger {
    rpc LoadingMessage(LoadingMessageRequest) returns (Empty);
    rpc EmitLogMessage(EmitLogMessageRequest) returns (Empty);
}
